--- a/css/style.css
+++ b/css/style.css
@@ -20,7 +20,66 @@
     position: relative;
 }
 
-.about hr {
+hr {
     width: 250px;
     border-top: 4px solid #666;
 }
+
+/* About */
+#about {
+    width: 100%;
+    height: auto;
+    background: #f7f7f7;
+    padding-top: 120px;
+  }
+  
+  #about .div-img-bg {
+    padding-bottom: 30px;
+    border: 20px solid #b8a07e;
+  }
+  
+  #about .div-img-bg .about-img img {
+    width: 100%;
+    box-shadow: 0px 0px 85px 0px rgba(0, 0, 0, 0.14);
+    margin-top: -60px;
+    margin-left: 40px;
+    height: 400px;
+    -o-object-fit: cover;
+    object-fit: cover;
+  }
+  
+  #about .about-descr .p-heading {
+    font-family: 'Playfair Display', serif;
+    font-size: 28px;
+    text-align: left;
+  }
+  
+  #about .about-descr .separator {
+    max-width: 80%;
+    margin-bottom: 0;
+    text-align: left;
+  }
+
+  html {
+    scroll-behavior: smooth;
+  }
+
+  @media (max-widht: 767px) {
+    .head-info .header-content h1 {
+      font-size: 32px;
+    }
+    #about .div-img-bg {
+      padding: 0;
+    }
+    #about .div-img-bg .about-img img {
+      margin-top: 0%;
+      margin-left: calc(0% - 0px);
+    }
+    #about .about-descr .p-heading {
+      font-size: 20px;
+    }
+    #about .about-descr .separator {
+      max-width: 100%;
+      margin-bottom: 0;
+    }
+  }
